--- a/src/components/profile-page.scss
+++ b/src/components/profile-page.scss
@@ -721,16 +721,25 @@
 			}
 		}
 
-
-
 		.user {
 			section.page {
+
 				.main_navigation
 				{
 					li {
 						a {
 							color: #000000;
 						}
+					}
+				}
+
+				.activity_log
+				{
+					.score-link{
+						width: 65%
+					}
+					.date {
+						left: 70%
 					}
 				}
 			}
@@ -787,7 +796,7 @@
 
 					li {
 						a {
-							color: #0f0f0f;
+							color: #ffffff;
 						}
 
 						&.selected {
@@ -833,9 +842,16 @@
 							top: 9px;
 						}
 					}
-				}
+
 					.main_navigation
 				{
+
+					height: 70px !important;
+					width: 100% !important;
+					left: 9px !important;
+					margin: -10px !important;
+					top: 10px !important;
+
 					background-color: rgb(216, 216, 216);
 					ul  {
 						padding-left: 90px !important;
@@ -845,11 +861,6 @@
 
 					}
 
-						height: 70px !important;
-						width: 100% !important;
-						left: 9px !important;
-						margin: -10px !important;
-						top: 10px !important;
 					li {
 
 						a {
@@ -859,15 +870,18 @@
 
 						&.selected {
 						a {
-							  border: 1px solid #c4c4c4; // Add border to all sides
- 							 border-bottom: none;
+							border: 1px solid #c4c4c4; // Add border to all sides
+ 							border-bottom: none;
 							height: 25px;
 							width: 84% !important;
+
 
 						}
 
 					}
+
 				 }
+				}
 				}
 
 				.settings_content {
@@ -888,7 +902,9 @@
 			section.page {
 				overflow: hidden;
 				background: none;
-
+				.show_more_activity {
+					visibility: visible;
+				}
 
 					.main_navigation
 				{
@@ -901,7 +917,7 @@
 
 						li {
 							a {
-								color: #ffffff;
+								color: #030303;
 							}
 
 						}
@@ -1003,7 +1019,7 @@
 
 					li {
 						a {
-							color: #0b0b0b;
+							color: #ffffff;
 						}
 
 						&.selected {
@@ -1011,7 +1027,9 @@
 								background:none;
 								 text-decoration: underline rgb(255, 255, 255) 3.5px;
 								border: none;
+								color: white
 							}
+
 						}
 
 
@@ -1110,7 +1128,7 @@
 
 						li {
 							a {
-								color: #ffffff;
+								color: #000000;
 							}
 
 						}
